Jupyter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter-service
  labels: 
      app: jupyter-notebook
spec:
  type: CusterIP
  selector:
    app: jupyter-notebook
  ports:
  - protocol: TCP
    port: 8888
    targetPort: 8888
