Jupyter/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyter-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: Jupyter.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jupyter-service
                port:
                  number: 8888
